<resources>
    <string name="app_name">IsmApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cyberlabs">CYBERLABS</string>
    <string name="technical_club">Technical Club</string>
    <string name="todo">TODO</string>
    <string name="verify">Verify</string>
    <string name="cancel">Cancel</string>
    <string name="enter_otp_recieved_via_email">Enter OTP received via email</string>
    <string name="pandey_aman812_gmail_com">pandey.aman812@gmail.com</string>
    <string name="create_your_account">Create your account</string>
    <string name="account_verification">Account Verification</string>
    <string name="random_otp">13133</string>
    <string name="club_description">Club Description</string>
    <string name="events">Events</string>
    <string name="feed">Feed</string>
    <string name="create_an_account">Create An Account</string>
    <string name="username">USERNAME</string>
    <string name="ism_email_id">ISM EMAIL ID</string>
    <string name="password">PASSWORD</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">EMAIL</string>
    <string name="submit">SUBMIT</string>
    <string name="admin">Admin</string>
    <string name="members">Members</string>
    <string name="reset_password">Reset Password</string>
    <string name="otp">OTP</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_as_guest">CONTINUE AS GUEST</string>
    <string name="login">LOGIN</string>
    <string name="feed_item_date">01/42/32 10:00 PM</string>
    <string name="feed_item_title">Selected List of Candidates</string>
    <string name="feed_item_desc">This is very interesting news coming up on your channel, get ready for it. Hope you will like it. Blah, Blah</string>
    <string name="feed_name">Feed Name</string>
    <string name="feed_item_name">Name</string>
    <string name="event_name">Android Workshop</string>
    <string name="event_venue">Venue</string>
    <string name="event_start_date">6 pm 12 Mar 2019</string>
    <string name="event_end_date">6 pm 15 Mar 2019</string>
    <string name="add_member">Add Member</string>
    <string name="hint_add_member">Enter the Email-Id of member</string>
    <string name="name_add_member">amanpandey@gmail.com</string>
    <string name="event_description">Description</string>
    <string name="add_event">Add Event</string>
    <string name="event_title">Event Title</string>
    <string name="event_short_desc">Enter Short Description</string>
    <string name="event_desc">Enter Description</string>
    <string name="enter_event_start_date">Enter Event Start Date</string>

    <string name="enter_event_end_date">Enter Event End Date (optional)</string>

    <string name="member_name">Tazril</string>
    <string name="about_club">About</string>
    <string name="Description">description</string>
    <string name="Submit">submit</string>
    <string name="long_lorem_ipsum">Duis tellus metus, elementum a lectus id, aliquet interdum mauris. Nam bibendum efficitur sollicitudin. Proin eleifend libero velit, nec fringilla dolor finibus quis. nMorbi eu libero pellentesque, rutrum metus quis, blandit est. Fusce bibendum accumsan nisi vulputate feugiat. In fermentum laoreet euismod. Praesent sem nisl, facilisis eget odio at, rhoncus scelerisque ipsum. Nulla orci dui, dignissim a risus ut, lobortis porttitor velit.         \\n\\nNulla id lectus metus. Maecenas a lorem in odio auctor facilisis non vitae nunc. Sed malesuada volutpat</string>
    <string name="title_activity_test2">Test2Activity</string>
    <string name="posted_on">Posted On</string>
    <string name="time">6 pm</string>
    <string name="date">22 Mar 2019</string>
    <string name="description">Description</string>
    <string name="our_team">Our Team</string>
    <string name="aman_pandey">Aman Pandey</string>
    <string name="core_developer">Core Developer</string>
    <string name="perul_jain">Perul Jain</string>
    <string name="tazril_ali">Tazril Ali</string>
    <string name="gaurav_pandey">Gaurav Pandey</string>
    <string name="backend_developer">Backend Developer</string>
    <string name="ujjawal_aggarwal">Ujjawal Aggarwal</string>
    <string name="mentor">Mentor</string>
    <string name="mission">Mission</string>
    <string name="feedback">Feedback</string>
    <string name="give_your_valueable_feedback_at">Give your valuable feedback at</string>
    <string name="https_cyberlabs_netlify_com">https://cyberlabs.netlify.com</string>
    <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>
    <string name="example_venue">SAC 301</string>
    <string name="example_date_and_time">10/20/222 10:00 AM</string>
    <string name="end_date">End Date</string>
</resources>
