<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.1"

        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_event_clublogo"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher_background"
            android:padding="@dimen/iv_padding_small"
            android:layout_width="40dp" />


        <TextView
            android:id="@+id/tv_event_clubname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/layout_margin"
            android:fontFamily="@font/lato"
            android:gravity="center_vertical"
            android:padding="@dimen/tv_padding"
            android:text="@string/feed_item_name"
            android:textSize="@dimen/title_head"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/layout_margin" />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_weight="2"
        android:padding="@dimen/iv_padding"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/tv_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:padding="@dimen/tv_padding"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textSize="@dimen/title_head"
        android:textStyle="bold" />
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="2"
        android:orientation="vertical">

            <TextView
                android:id="@+id/tv_event_startdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_start_date"
                android:padding="@dimen/tv_padding"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_event_enddate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/tv_padding"
                android:text="@string/event_end_date"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_event_venue"
            android:layout_width="wrap_content"
            android:padding="@dimen/tv_padding"
            android:layout_height="wrap_content"
            android:text="@string/event_venue"
            android:textStyle="bold"  />

        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_description"
        android:padding="@dimen/tv_padding"
        android:textSize="@dimen/title_head"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/tv_event_desc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:fontFamily="@font/lato"
        android:padding="@dimen/tv_padding"
        android:text="@string/feed_item_desc"
        android:textSize="@dimen/title_12sp"/>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>