<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".club.addclubmember.view.AddMember">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="@string/add_member"
        android:textSize="@dimen/head_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/layout_margin"
        android:layout_weight="15"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_add_member_email_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_member_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:hint="@string/hint_add_member"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:text="@string/name_add_member"
                android:textSize="@dimen/edit_text" />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/is_member_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/admin" />

        <Button
            android:id="@+id/add_member_sumbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit" />


    </LinearLayout>


</LinearLayout>