<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_image_height"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/institutelogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_vertical"
        android:paddingBottom="@dimen/padding_vertical">

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mtf_image="@drawable/ic_email">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/ism_email_id"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mtf_image="@drawable/ic_key">

            <EditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        </com.github.florent37.materialtextfield.MaterialTextField>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_login"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_forgot_pass"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/forgot_password"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_signup"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_guest"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/continue_as_guest"
        android:textAllCaps="false" />

</LinearLayout>




