<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="6dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_event_clublogo"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_width="40dp" />


                <TextView
                    android:id="@+id/tv_event_clubname"
                    android:layout_width="345dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/feed_item_name"
                    android:textSize="@dimen/title_head"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/viewBgColor" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/layout_padding">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_event_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:padding="@dimen/tv_padding"
                        android:layout_weight="1"
                        android:text="@string/event_name"
                        android:textColor="@android:color/background_dark"
                        android:textSize="@dimen/title_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_event_short_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:fontFamily="@font/lato"
                        android:padding="@dimen/tv_padding"
                        android:text="@string/feed_item_desc"
                        android:textSize="@dimen/title_12sp"/>
                    <TextView
                        android:id="@+id/tv_event_venue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:padding="@dimen/tv_padding"
                        android:layout_weight="1"
                        android:text="@string/event_venue"
                        android:textColor="@android:color/background_dark"
                        android:textSize="@dimen/title_12sp"
                        />
                    <TextView
                    android:id="@+id/tv_event_startdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:padding="@dimen/tv_padding"
                    android:layout_weight="1"
                    android:text="@string/event_start_date"
                    android:textColor="@android:color/background_dark"
                    android:textSize="@dimen/title_12sp"
                    />
                    <TextView
                        android:id="@+id/tv_event_enddate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:padding="@dimen/tv_padding"
                        android:layout_weight="1"
                        android:text="@string/event_end_date"
                        android:textColor="@android:color/background_dark"
                        android:textSize="@dimen/title_12sp"
                         />


                </LinearLayout>

                <ImageView
                    android:layout_height="160dp"
                    android:id="@+id/iv_event_pic"
                    android:layout_weight="1.5"
                    android:padding="@dimen/iv_padding_small"
                    android:src="@color/colorAccent"
                    android:contentDescription="@string/todo" />

            </TableRow>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>