<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin">


        <ImageView
            android:id="@+id/iv_add_event_pic"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="getImage"
            android:padding="@dimen/iv_padding"
            android:src="@drawable/rectangle" />

        <EditText
            android:id="@+id/tv_add_event_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/event_title"
            android:padding="@dimen/tv_padding" />

        <EditText
            android:id="@+id/tv_add_event_venue"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/event_venue"
            android:padding="@dimen/tv_padding" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_event_start_date"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_event_start_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:inputType="date"
                android:padding="@dimen/tv_padding" />

            <ImageView
                android:id="@+id/iv_start_day"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/daypick" />

            <TextView
                android:id="@+id/add_event_start_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:inputType="date"
                android:padding="@dimen/tv_padding" />

            <ImageView
                android:id="@+id/iv_start_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/timepick" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_event_end_date"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_event_end_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:inputType="date"
                android:padding="@dimen/tv_padding" />

            <ImageView
                android:id="@+id/iv_end_day"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/daypick" />

            <TextView
                android:id="@+id/add_event_end_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:inputType="date"
                android:padding="@dimen/tv_padding" />

            <ImageView
                android:id="@+id/iv_end_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/timepick" />


        </LinearLayout>


        <EditText
            android:id="@+id/tv_add_event_short_desc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/event_short_desc"
            android:inputType="textMultiLine"
            android:padding="@dimen/tv_padding" />

        <EditText
            android:id="@+id/tv_add_event_desc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/event_desc"
            android:inputType="textMultiLine"
            android:padding="@dimen/tv_padding" />

    <Button
        android:id="@+id/create_event_submit"
        android:layout_width="match_parent"
        android:layout_weight="0.6"
        android:layout_height="0dp"
        android:enabled="false"
        android:text="SUBMIT" />
</LinearLayout>